--- a/.github/workflows/argocd-setup.yaml
+++ b/.github/workflows/argocd-setup.yaml
@@ -29,47 +29,62 @@ jobs:
             set -e
             export KUBECONFIG=$HOME/.kube/config
 
-            echo "🧹 Phase 1: Deep Clean"
-            kubectl delete ns argocd --timeout=60s || true
-            while kubectl get ns argocd &>/dev/null; do sleep 5; done
-
-            echo "🚀 Phase 2: Fresh Install"
-            # 0. StorageClass 설치 (기초 공사)
-            # 이게 없으면 프로메테우스의 PVC(10Gi)를 할당할 수 없어 배포가 실패합니다.
-            echo "📦 Installing Local Path Provisioner..."
-            kubectl apply -f https://raw.githubusercontent.com/rancher/local-path-provisioner/master/deploy/local-path-storage.yaml
+            echo "🧹 Phase 1: Total Destruction (Idempotency)"
+            echo "════════════════════════════════════"
             
-            # 설치된 local-path를 기본 저장소(Default)로 지정
+            # 1. Root Application 먼저 제거 (연쇄 삭제 방지 및 안전한 종료)
+            kubectl delete application root-app -n argocd --timeout=30s || true
+
+            # 2. 관련 네임스페이스 및 리소스 일괄 삭제
+            # local-path-provisioner까지 포함하여 완전히 초기화합니다.
+            kubectl delete ns argocd monitoring --timeout=60s || true
+            kubectl delete -f https://raw.githubusercontent.com/rancher/local-path-provisioner/master/deploy/local-path-storage.yaml || true
+            
+            # 3. 네임스페이스가 완전히 사라질 때까지 대기 (가장 중요)
+            # 'Terminating' 상태에서 재생성을 시도하면 에러가 나기 때문에 확실히 기다려야 합니다.
+            echo "⏳ Waiting for cleanup to complete..."
+            while kubectl get ns argocd 2>/dev/null || kubectl get ns monitoring 2>/dev/null; do
+              echo "Still cleaning up residues..."
+              sleep 5
+            done
+            echo "✅ Cleanup complete. Proceeding to Fresh Install."
+
+            echo ""
+            echo "🚀 Phase 2: Fresh Install & Configuration"
+            echo "════════════════════════════════════"
+
+            # 0. StorageClass 설치 (기초 공사)
+            kubectl apply -f https://raw.githubusercontent.com/rancher/local-path-provisioner/master/deploy/local-path-storage.yaml
             kubectl patch storageclass local-path -p '{"metadata": {"annotations":{"storageclass.kubernetes.io/is-default-class":"true"}}}'
 
             # 1. 네임스페이스 생성
-            kubectl create namespace argocd || true
-            
-            # 2. ArgoCD 설치 (버전 고정)
+            kubectl create namespace argocd
+            kubectl create namespace monitoring
+
+            # 2. ArgoCD 설치
             kubectl apply --server-side --force-conflicts -n argocd -f https://raw.githubusercontent.com/argoproj/argo-cd/v2.10.4/manifests/install.yaml
 
-            # 3. 🚨 [핵심] 누락 방지를 위한 Redis Secret 강제 생성
-            echo "🔐 Injecting ArgoCD Redis Secret..."
+            # 3. Secrets 생성 (멱등성 보장형: 있으면 업데이트, 없으면 생성)
+            # Redis Secret
             kubectl create secret generic argocd-redis \
               -n argocd --from-literal=auth='' \
               --dry-run=client -o yaml | kubectl apply -f -
 
-            # 4. 🔐 [핵심] Prometheus용 Grafana Secret 주입
-            echo "🔐 Injecting Grafana Credentials for Prometheus..."
-            kubectl create namespace monitoring || true
+            # Grafana Secret
             kubectl create secret generic grafana-admin-credentials \
               -n monitoring \
               --from-literal=admin-password='${{ secrets.GRAFANA_PASSWORD }}' \
               --dry-run=client -o yaml | kubectl apply -f -
 
-            # 5. ArgoCD 서버 대기 (타임아웃 10분 연장)
+            # 4. ArgoCD 서버 대기
             echo "⏳ Waiting for ArgoCD Server Rollout..."
             kubectl rollout status deployment/argocd-server -n argocd --timeout=600s
 
-            # 6. 📂 Root Application 등록 (Prometheus 포함 모든 앱의 시작점)
+            # 5. Root Application 등록
             echo "📂 Applying Root Application..."
             REPO_OWNER=$(echo "${{ github.repository }}" | cut -d'/' -f1)
             REPO_NAME=$(echo "${{ github.repository }}" | cut -d'/' -f2)
+            # master 브랜치 기준으로 root-app.yaml을 가져옵니다.
             curl -s https://raw.githubusercontent.com/${REPO_OWNER}/${REPO_NAME}/master/argocd/root-app.yaml | kubectl apply -f -
 
             echo "✅ All Setup Complete!"
