--- a/.github/workflows/monitoring-setup.yaml
+++ b/.github/workflows/monitoring-setup.yaml
@@ -25,27 +25,24 @@ jobs:
             set -e
             export KUBECONFIG=$HOME/.kube/config
 
-            echo "🛡️ Phase 1: Infrastructure Compliance Check"
-            echo "════════════════════════════════════════"
-            # 1. 방화벽: 통신 장애의 근원 ufw 비활성화
+            echo "🛡️ Phase 1: Infrastructure & Storage Fix"
+            # 1. 방화벽 및 MTU 해결
             sudo ufw disable || true
-            
-            # 2. MTU: Tailscale 환경에 맞게 1220 강제 패치
-            kubectl patch cm -n kube-system calico-config --type merge \
-              -p '{"data": {"veth_mtu": "1220"}}' || true
+            kubectl patch cm -n kube-system calico-config --type merge -p '{"data": {"veth_mtu": "1220"}}' || true
 
-            echo "🚀 Phase 2: Declarative Monitoring Setup"
-            echo "════════════════════════════════════════"
-            # 1. 네임스페이스 보장
+            # 2. [추가] StorageClass 설치 (이게 없으면 프로메테우스가 안 뜹니다)
+            kubectl apply -f https://raw.githubusercontent.com/rancher/local-path-provisioner/master/deploy/local-path-storage.yaml
+            kubectl patch storageclass local-path -p '{"metadata": {"annotations":{"storageclass.kubernetes.io/is-default-class":"true"}}}'
+
+            echo "🚀 Phase 2: Direct Monitoring Application Sync"
+            # 1. 네임스페이스 및 시크릿 보장
             kubectl create namespace monitoring --dry-run=client -o yaml | kubectl apply -f -
-
-            # 2. 그라파나 비밀번호 시크릿 (설정 변경 시 자동 업데이트)
             kubectl create secret generic grafana-admin-credentials \
               -n monitoring --from-literal=admin-password='${{ secrets.GRAFANA_PASSWORD }}' \
               --dry-run=client -o yaml | kubectl apply -f -
 
-            # 3. [핵심] GitHub Raw URL을 통한 주문서(Application) 호출
-            # 마스터 브랜치의 최신 monitoring.yaml을 직접 apply 합니다.
+            # 2. [수정] URL 대신 YAML 직접 주입 (Private 리포지토리 이슈 원천 차단)
+            # metadata.namespace는 반드시 argocd여야 관리 대상에 포함됩니다.
             RAW_URL="https://raw.githubusercontent.com/${{ github.repository }}/master/argocd/monitoring.yaml"
             
             echo "📥 Fetching blueprint from: $RAW_URL"
@@ -54,4 +51,4 @@ jobs:
             echo "⏳ Monitoring Application Sync Status:"
             kubectl get app -n argocd prometheus-stack || echo "⚠️ Waiting for ArgoCD to recognize the app..."
 
-            echo "✅ All blueprints applied. Monitoring setup in progress!"
+            echo "✅ Monitoring setup applied directly!"
