--- a/manifests/monitoring.yaml
+++ b/manifests/monitoring.yaml
@@ -8,7 +8,7 @@ spec:
   source:
     chart: kube-prometheus-stack
     repoURL: https://prometheus-community.github.io/helm-charts
-    targetRevision: 81.x.x
+    targetRevision: 8.5.1
     helm:
       values: |
         grafana:
