--- a/.github/workflows/bootstrap.yml
+++ b/.github/workflows/bootstrap.yml
@@ -2,10 +2,10 @@ name: "Step 1: Kubespray K8s"
 
 on:
   workflow_dispatch:
-  push:
-    branches: [ master ]
-    paths:
-      - ".github/workflows/bootstrap.yml"
+  # push:
+  #   branches: [ master ]
+  #   paths:
+  #     - ".github/workflows/bootstrap.yml"
 
 jobs:
   setup:
