--- a/.github/workflows/monitoring-setup.yaml
+++ b/.github/workflows/monitoring-setup.yaml
@@ -35,19 +35,56 @@ jobs:
             kubectl apply -f https://raw.githubusercontent.com/rancher/local-path-provisioner/master/deploy/local-path-storage.yaml
             kubectl patch storageclass local-path -p '{"metadata": {"annotations":{"storageclass.kubernetes.io/is-default-class":"true"}}}'
 
-            echo "🚀 Phase 2: Direct Monitoring Application Sync"
-            # 1. 네임스페이스 및 시크릿 보장
+            echo "🚀 Phase 2: Monitoring Stack (Idempotent Apply)"
+            # 1. 네임스페이스 및 시크릿 보장 (이미 있으면 유지되므로 데이터 안전)
             kubectl create namespace monitoring --dry-run=client -o yaml | kubectl apply -f -
             kubectl create secret generic grafana-admin-credentials \
               -n monitoring --from-literal=admin-password='${{ secrets.GRAFANA_PASSWORD }}' \
               --dry-run=client -o yaml | kubectl apply -f -
 
-            # 2. [수정] URL 대신 YAML 직접 주입 (Private 리포지토리 이슈 원천 차단)
-            # metadata.namespace는 반드시 argocd여야 관리 대상에 포함됩니다.
-            RAW_URL="https://raw.githubusercontent.com/${{ github.repository }}/master/argocd/monitoring.yaml"
-            
-            echo "📥 Fetching blueprint from: $RAW_URL"
-            kubectl apply -f $RAW_URL
+            # 2. [최종 병기] Heredoc 주입 (404 에러 완벽 차단)
+            # 따옴표('EOF')를 사용하여 SSH 환경에서의 변수 해석 오류를 방어합니다.
+            kubectl apply -f - <<'EOF'
+            apiVersion: argoproj.io/v1alpha1
+            kind: Application
+            metadata:
+            name: prometheus-stack
+            namespace: argocd
+            spec:
+            project: default
+            source:
+                chart: kube-prometheus-stack
+                repoURL: https://prometheus-community.github.io/helm-charts
+                targetRevision: 68.2.1 # 아까 수정한 안정화 버전으로 고정
+                helm:
+                values: |
+                    grafana:
+                    admin:
+                        existingSecret: "grafana-admin-credentials"
+                        passwordKey: "admin-password"
+                    persistence:
+                        enabled: true
+                        size: 5Gi
+                    prometheus:
+                    prometheusSpec:
+                        retention: 15d
+                        storageSpec:
+                        volumeClaimTemplate:
+                            spec:
+                            accessModes: ["ReadWriteOnce"]
+                            resources:
+                                requests:
+                                storage: 10Gi
+            destination:
+                server: https://kubernetes.default.svc
+                namespace: monitoring
+            syncPolicy:
+                automated:
+                prune: true
+                selfHeal: true
+                syncOptions:
+                - CreateNamespace=true
+            EOF
 
             echo "⏳ Monitoring Application Sync Status:"
             kubectl get app -n argocd prometheus-stack || echo "⚠️ Waiting for ArgoCD to recognize the app..."
